# zmk-feature-hall-effect

./: CMakeLists.txt  README.md
dts/bindings/: he,kscan-he-multiplexer.yaml
include/: adc_direct.h  adc_multiplexer.h
src/: adc_direct.c  adc_multiplexer.c
src/input/: input_listener.c  input_split.c
src/input_processors/: input_processor_adjustable_actuation.c
src/kscan/: CMakeLists.txt  Kconfig  kscan_direct_pulsed.c  kscan_multiplexer.c
src/kscan/forwarders/: CMakeLists.txt
